web/tautulli/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tautulli
  namespace: web
spec:
  selector:
    matchLabels:
      app: tautulli
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
        - image: tautulli/tautulli:latest
          name: tautulli
          ports:
            - containerPort: 8181
          volumeMounts:
            - name: conf
              mountPath: /config
      volumes:
        - name: conf
          persistentVolumeClaim:
            claimName: tautulli
