web/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: web
  labels:
    app: tautulli
spec:
  selector:
    app: tautulli
  ports:
    - port: 8181
      name: tautulli
